<resources>
    <string name="app_name">CDMX-GO</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="iniciar_sesion_con_fb">Iniciar Sesión con Facebook</string>
    <string name="o">o</string>
    <string name="facebook_app_id">207482909746983</string>
    <string name="aceptar">Aceptar</string>
    <string name="olvide_pass">Olvidé mi contraseña</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="password">Contraseña (Al menos 6 caracteres)</string>
    <string name="correo">Correo Electrónico</string>
    <string name="aceptar_notificaciones">¿Deseas recibir notificaciones a tu celular sobre nuevos eventos?</string>
    <string name="title_activity_principal">CDMX-GO</string>
    <string name="action_settings">Settings</string>
    <string name="iniciando_sesion">Iniciando Sesión...</string>
    <string name="creando_cuenta">Creando cuenta...</string>
    <string name="repite_password">Confirmar la Contraseña</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="mi_ubicacion">Mi Ubicación</string>
    <string name="nuevo_password">Nueva Contraseña</string>
    <string name="actual_password">Contraseña Actual</string>
    <string name="cambiar_password">Cambiar Contraseña</string>
    <string name="error_iniciar_sesion">Ocurrió un error al Iniciar la Sesión</string>
    <string name="error_crear_cuenta">Ocurrió un error al Crear la Cuenta</string>
    <string name="error_campos_vacios">Favor de introducir todos los datos</string>
    <string name="error_passwords_no_coinciden">Las Contraseñas ingresadas no coinciden</string>
    <string name="error_password_longitud">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_password_actual_no_coinciden">La contraseña actual no coincide</string>
    <string name="exito_cambiar_password">Contraseña cambiada con éxito</string>
    <string name="crear_user_name">Crear Nombre de Usuario</string>
    <string name="crear">Crear</string>
    <string name="error">Ocurrio un error</string>
    <string name="usuario_ya_existe">El nombre de Usuario introducido ya existe, intente con uno distinto</string>
    <string name="como_llegar">Cómo llegar</string>
    <string name="donde_es">¿Dónde es?</string>
    <string name="puedes_subir_calificacion">Puedes tocar las estrellas para darnos tu calificación de éste evento</string>
    <string name="exito_crear_cuenta">Cuenta creada Éxitosamente!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_card_view"> </string>
</resources>
