<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_crea_cuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.programacion.robertomtz.cdmx_go.Activities.CreaCuentaActivity">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/crear_cuenta_iv_image"
            android:padding="5dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/logo_fondo_blanco"/>

        <EditText
            android:id="@+id/crear_cuenta_et_usuario"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/correo"
            android:maxLines="1"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="18dp" />

        <EditText
            android:id="@+id/crear_cuenta_et_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="14sp"
            android:layout_marginBottom="14dp" />

        <EditText
            android:id="@+id/crear_cuenta_et_repite_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/repite_password"
            android:maxLines="1"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:layout_marginBottom="40dp" />

        <Switch
            android:id="@+id/crear_cuenta_switch_informacion"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/aceptar_notificaciones"
            android:layout_marginBottom="21dp" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/crear_cuenta"
            android:id="@+id/crear_cuenta_btn_crear_cuenta"/>

    </LinearLayout>

</ScrollView>