<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/user"
            android:id="@+id/fragment_user_iv_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/fragment_user_tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_usuario"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textSize="30sp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/coins"
                android:layout_width="60dp"
                android:layout_height="60dp" />

            <TextView
                android:id="@+id/fragment_user_tv_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="Mis monedas: 100"
                android:textSize="22sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/fragment_user_tv_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/fragment_user_et_nuevo_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/nuevo_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/fragment_user_et_password_actual"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/actual_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/fragment_user_btn_cambiar_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/cambiar_password"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</ScrollView>