<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_inicia_sesion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.programacion.robertomtz.cdmx_go.Activities.IniciaSesionActivity">

        <com.facebook.login.widget.LoginButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            facebook:com_facebook_login_text="@string/iniciar_sesion_con_fb"
            android:layout_gravity="center_horizontal"
            android:id="@+id/inicia_sesion_btn_fb"
            android:layout_marginTop="42dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/o"
            android:textSize="20sp"
            android:layout_marginTop="33dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp" >

            <EditText
                android:id="@+id/inicia_sesion_et_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp" >

            <EditText
                android:id="@+id/inicia_sesion_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Contraseña"
                android:textSize="14sp"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:text="Iniciar Sesión"
            android:id="@+id/inicia_sesion_btn_aceptar"
            android:layout_marginBottom="39dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/olvide_pass"
            android:id="@+id/inicia_sesion_tv_olvide_pass" />

    </LinearLayout>

</ScrollView>